--- a/Application/NLP/RNN实现情感分类.ipynb
+++ b/Application/NLP/RNN实现情感分类.ipynb
@@ -5,9 +5,7 @@
    "id": "ace41c03-dfa3-4cb6-88bc-bcaa72cfdc85",
    "metadata": {},
    "source": [
-    "# RNN实现情感分类\n",
-    "\n",
-    "[![下载Notebook](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_notebook.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3.0rc2/tutorials/application/zh_cn/nlp/mindspore_sentiment_analysis.ipynb)&emsp;[![下载样例代码](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_download_code.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3.0rc2/tutorials/application/zh_cn/nlp/mindspore_sentiment_analysis.py)&emsp;[![查看源文件](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_source.svg)](https://gitee.com/mindspore/docs/blob/r2.3.0rc2/tutorials/application/source_zh_cn/nlp/sentiment_analysis.ipynb)"
+    "# RNN实现情感分类"
    ]
   },
   {
@@ -84,19 +82,19 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "5ba9a8a2099a9282",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 查看当前 mindspore 版本\n",
     "!pip show mindspore"
-   ],
-   "id": "5ba9a8a2099a9282"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "572e506f-169a-4a07-95a8-40d89fc39104",
    "metadata": {},
    "outputs": [],
@@ -150,21 +148,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bb0df701-e3b5-46e3-968d-9d44a2796eec",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/nginx/.mindspore_examples/aclImdb_v1.tar.gz'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "imdb_path = download('aclImdb_v1.tar.gz', 'https://mindspore-website.obs.myhuaweicloud.com/notebook/datasets/aclImdb_v1.tar.gz')\n",
     "imdb_path"
@@ -196,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0f260663-5525-4831-ad5b-b24cdc2ee07b",
    "metadata": {},
    "outputs": [],
@@ -254,21 +241,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e08908b9-4997-4c93-a1e1-d1573991d729",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25000"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "imdb_train = IMDBData(imdb_path, 'train')\n",
     "len(imdb_train)"
@@ -284,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cbf93849-0061-41e3-b49e-0f6475c84f00",
    "metadata": {},
    "outputs": [],
@@ -307,21 +283,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2471d850-6770-4308-bcbe-40b5bbd919db",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<mindspore.dataset.engine.datasets_user_defined.GeneratorDataset at 0xfffece2a5be0>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "imdb_train, imdb_test = load_imdb(imdb_path)\n",
     "imdb_train"
@@ -350,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "519a863f-4053-4c20-93e2-b0acac829372",
    "metadata": {},
    "outputs": [],
@@ -392,21 +357,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "34ca0aee-7deb-45ea-8231-2be5f9c2e632",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "400002"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "glove_path = download('glove.6B.zip', 'https://mindspore-website.obs.myhuaweicloud.com/notebook/datasets/glove.6B.zip')\n",
     "vocab, embeddings = load_glove(glove_path)\n",
@@ -423,38 +377,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b12e8554-496c-4f35-a0bc-67a3f60ff488",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0,\n",
-       " array([-0.038194, -0.24487 ,  0.72812 , -0.39961 ,  0.083172,  0.043953,\n",
-       "        -0.39141 ,  0.3344  , -0.57545 ,  0.087459,  0.28787 , -0.06731 ,\n",
-       "         0.30906 , -0.26384 , -0.13231 , -0.20757 ,  0.33395 , -0.33848 ,\n",
-       "        -0.31743 , -0.48336 ,  0.1464  , -0.37304 ,  0.34577 ,  0.052041,\n",
-       "         0.44946 , -0.46971 ,  0.02628 , -0.54155 , -0.15518 , -0.14107 ,\n",
-       "        -0.039722,  0.28277 ,  0.14393 ,  0.23464 , -0.31021 ,  0.086173,\n",
-       "         0.20397 ,  0.52624 ,  0.17164 , -0.082378, -0.71787 , -0.41531 ,\n",
-       "         0.20335 , -0.12763 ,  0.41367 ,  0.55187 ,  0.57908 , -0.33477 ,\n",
-       "        -0.36559 , -0.54857 , -0.062892,  0.26584 ,  0.30205 ,  0.99775 ,\n",
-       "        -0.80481 , -3.0243  ,  0.01254 , -0.36942 ,  2.2167  ,  0.72201 ,\n",
-       "        -0.24978 ,  0.92136 ,  0.034514,  0.46745 ,  1.1079  , -0.19358 ,\n",
-       "        -0.074575,  0.23353 , -0.052062, -0.22044 ,  0.057162, -0.15806 ,\n",
-       "        -0.30798 , -0.41625 ,  0.37972 ,  0.15006 , -0.53212 , -0.2055  ,\n",
-       "        -1.2526  ,  0.071624,  0.70565 ,  0.49744 , -0.42063 ,  0.26148 ,\n",
-       "        -1.538   , -0.30223 , -0.073438, -0.28312 ,  0.37104 , -0.25217 ,\n",
-       "         0.016215, -0.017099, -0.38984 ,  0.87424 , -0.72569 , -0.51058 ,\n",
-       "        -0.52028 , -0.1459  ,  0.8278  ,  0.27062 ], dtype=float32))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "idx = vocab.tokens_to_ids('the')\n",
     "embedding = embeddings[idx]\n",
@@ -481,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6a9451b7-e30b-4039-9955-40daac18b6e8",
    "metadata": {},
    "outputs": [],
@@ -503,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "4f8cdc63-8460-4432-baa7-297acb17dd80",
    "metadata": {},
    "outputs": [],
@@ -545,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "8b9988cf-0dfb-424d-930a-1dc2f1ff9176",
    "metadata": {},
    "outputs": [],
@@ -591,17 +517,17 @@
     "\n",
     "循环神经网络（Recurrent Neural Network, RNN）是一类以序列（sequence）数据为输入，在序列的演进方向进行递归（recursion）且所有节点（循环单元）按链式连接的神经网络。下图为RNN的一般结构：\n",
     "\n",
-    "![RNN-0](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/tutorials/application/source_zh_cn/nlp/images/0-RNN-0.png)\n",
+    "![RNN-0](pic/0-RNN-0.png)\n",
     "\n",
     "> 图示左侧为一个RNN Cell循环，右侧为RNN的链式连接平铺。实际上不管是单个RNN Cell还是一个RNN网络，都只有一个Cell的参数，在不断进行循环计算中更新。\n",
     "\n",
     "由于RNN的循环特性，和自然语言文本的序列特性(句子是由单词组成的序列)十分匹配，因此被大量应用于自然语言处理研究中。下图为RNN的结构拆解：\n",
     "\n",
-    "![RNN](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/tutorials/application/source_zh_cn/nlp/images/0-RNN.png)\n",
+    "![RNN](pic/0-RNN.png)\n",
     "\n",
     "RNN单个Cell的结构简单，因此也造成了梯度消失(Gradient Vanishing)问题，具体表现为RNN网络在序列较长时，在序列尾部已经基本丢失了序列首部的信息。为了克服这一问题，LSTM(Long short-term memory)被提出，通过门控机制(Gating Mechanism)来控制信息流在每个循环步中的留存和丢弃。下图为LSTM的结构拆解：\n",
     "\n",
-    "![LSTM](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/tutorials/application/source_zh_cn/nlp/images/0-LSTM.png)\n",
+    "![LSTM](pic/0-LSTM.png)\n",
     "\n",
     "本节我们选择LSTM变种而不是经典的RNN做特征提取，来规避梯度消失问题，并获得更好的模型效果。下面来看MindSpore中`nn.LSTM`对应的公式：\n",
     "\n",
@@ -618,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "c0f1e26d-1b7c-4d50-947d-4fdda527b651",
    "metadata": {},
    "outputs": [],
@@ -664,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "591b1301-e9e3-44eb-a88b-09d2e807f9f9",
    "metadata": {},
    "outputs": [],
@@ -699,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f5479830-8370-484d-a6ae-2a5985ab43b3",
    "metadata": {},
    "outputs": [],
@@ -743,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "028a0b84-deee-4d1b-a1ad-a6ad515fd22f",
    "metadata": {},
    "outputs": [],
@@ -779,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "78bfafbc-3a10-4aab-b9bb-3189f84bc81a",
    "metadata": {},
    "outputs": [],
@@ -860,21 +786,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d477ec12-04ff-488b-8d31-ae82e5e9be2f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([], [])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "param_dict = ms.load_checkpoint(ckpt_file_name)\n",
     "ms.load_param_into_net(model, param_dict)"
@@ -919,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "b35902c6-84a3-4879-8fde-2d6f322f49eb",
    "metadata": {},
    "outputs": [],
@@ -949,62 +864,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4f6ea007-96a9-4b7c-9f5c-59329c0c7de9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Negative'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict_sentiment(model, vocab, \"This film is terrible\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "d6d9108e-8151-4ccc-a433-b33f437f1c24",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Positive'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict_sentiment(model, vocab, \"This film is great\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a44dade-d1a9-45d0-811d-292bf69ead51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1016,7 +901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.6.4"
   },
   "vscode": {
    "interpreter": {
