--- a/Application/CV/Vision Transformer图像分类.ipynb
+++ b/Application/CV/Vision Transformer图像分类.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -11,15 +10,12 @@
    "source": [
     "# Vision Transformer图像分类\n",
     "\n",
-    "[![下载Notebook](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_notebook.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/application/zh_cn/cv/mindspore_vit.ipynb)&emsp;[![下载样例代码](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_download_code.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/application/zh_cn/cv/mindspore_vit.py)&emsp;[![查看源文件](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_source.svg)](https://gitee.com/mindspore/docs/blob/r2.3/tutorials/application/source_zh_cn/cv/vit.ipynb)\n",
-    "\n",
     "感谢[ZOMI酱](https://gitee.com/sanjaychan)对本文的贡献。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -35,7 +31,7 @@
     "\n",
     "ViT模型的主体结构是基于Transformer模型的Encoder部分（部分结构顺序有调整，如：Normalization的位置与标准Transformer不同），其结构图[1]如下：\n",
     "\n",
-    "![vit-architecture](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/tutorials/application/source_zh_cn/cv/images/vit_architecture.png)\n",
+    "![vit-architecture](pic/vit_architecture.png)\n",
     "\n",
     "### 模型特点\n",
     "\n",
@@ -53,7 +49,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -77,10 +72,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture captured_output\n",
     "# 实验环境已经预装了mindspore==2.2.14，如需更换mindspore版本，可更改下面mindspore的版本号\n",
@@ -89,10 +84,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 查看当前 mindspore 版本\n",
     "!pip show mindspore"
@@ -100,26 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/datasets/vit_imagenet_dataset.zip (489.1 MB)\n",
-      "\n",
-      "file_sizes: 100%|████████████████████████████| 513M/513M [00:09<00:00, 52.3MB/s]\n",
-      "Extracting zip file...\n",
-      "Successfully downloaded / unzipped to ./\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from download import download\n",
     "\n",
@@ -134,6 +120,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -169,7 +158,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -183,11 +171,11 @@
     "\n",
     "Transformer模型源于2017年的一篇文章[2]。在这篇文章中提出的基于Attention机制的编码器-解码器型结构在自然语言处理领域获得了巨大的成功。模型结构如下图所示：\n",
     "\n",
-    "![transformer-architecture](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/tutorials/application/source_zh_cn/cv/images/transformer_architecture.png)\n",
+    "![transformer-architecture](pic/transformer_architecture.png)\n",
     "\n",
     "其主要结构为多个Encoder和Decoder模块所组成，其中Encoder和Decoder的详细结构如下图[2]所示：\n",
     "\n",
-    "![encoder-decoder](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/tutorials/application/source_zh_cn/cv/images/encoder_decoder.png)\n",
+    "![encoder-decoder](pic/encoder_decoder.png)\n",
     "\n",
     "Encoder与Decoder由许多结构组成，如：多头注意力（Multi-Head Attention）层，Feed Forward层，Normaliztion层，甚至残差连接（Residual Connection，图中的“Add”）。不过，其中最重要的结构是多头注意力（Multi-Head Attention）结构，该结构基于自注意力（Self-Attention）机制，是多个Self-Attention的并行组成。\n",
     "\n",
@@ -197,7 +185,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -220,7 +207,7 @@
     "\\tag{1}\n",
     "$$\n",
     "\n",
-    "![self-attention1](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/tutorials/application/source_zh_cn/cv/images/self_attention_1.png)\n",
+    "![self-attention1](pic/self_attention_1.png)\n",
     "\n",
     "2. 自注意力机制的自注意主要体现在它的Q，K，V都来源于其自身，也就是该过程是在提取输入的不同顺序的向量的联系与特征，最终通过不同顺序向量之间的联系紧密性（Q与K乘积经过Softmax的结果）来表现出来。**Q，K，V得到后就需要获取向量间权重，需要对Q和K进行点乘并除以维度的平方根，对所有向量的结果进行Softmax处理，通过公式(2)的操作，我们获得了向量之间的关系权重。**\n",
     "\n",
@@ -233,11 +220,11 @@
     "\\tag{2}\n",
     "$$\n",
     "\n",
-    "![self-attention3](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/tutorials/application/source_zh_cn/cv/images/self_attention_3.png)\n",
+    "![self-attention3](pic/self_attention_3.png)\n",
     "\n",
     "$$ Softmax: \\hat a_{1,i} = exp(a_{1,i}) / \\sum_j exp(a_{1,j}),\\hspace{1em} j = 1,2,3 \\ldots \\tag{3}$$\n",
     "\n",
-    "![self-attention2](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/tutorials/application/source_zh_cn/cv/images/self_attention_2.png)\n",
+    "![self-attention2](pic/self_attention_2.png)\n",
     "\n",
     "3. 其最终输出则是通过V这个映射后的向量与Q，K经过Softmax结果进行weight sum获得，这个过程可以理解为在全局上进行自注意表示。**每一组Q，K，V最后都有一个V输出，这是Self-Attention得到的最终结果，是当前向量在结合了它与其他向量关联权重后得到的结果。**\n",
     "\n",
@@ -248,7 +235,7 @@
     "\n",
     "通过下图可以整体把握Self-Attention的全部过程。\n",
     "\n",
-    "![self-attention](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/tutorials/application/source_zh_cn/cv/images/self_attention_process.png)\n",
+    "![self-attention](pic/self_attention_process.png)\n",
     "\n",
     "多头注意力机制就是将原本self-Attention处理的向量分割为多个Head进行处理，这一点也可以从代码中体现，这也是attention结构可以进行并行加速的一个方面。\n",
     "\n",
@@ -256,7 +243,7 @@
     "\n",
     "所以，对于同一个输入向量，多个注意力机制可以同时对其进行处理，即利用并行计算加速处理过程，又在处理的时候更充分的分析和利用了向量特征。下图展示了多头注意力机制，其并行能力的主要体现在下图中的$a_1$和$a_2$是同一个向量进行分割获得的。\n",
     "\n",
-    "![multi-head-attention](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/tutorials/application/source_zh_cn/cv/images/multi_head_attention.png)\n",
+    "![multi-head-attention](pic/multi_head_attention.png)\n",
     "\n",
     "以下是Multi-Head Attention代码，结合上文的解释，代码清晰的展现了这一过程。"
    ]
@@ -266,6 +253,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -318,7 +308,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -334,6 +323,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -382,7 +374,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -390,7 +381,7 @@
    "source": [
     "接下来就利用Self-Attention来构建ViT模型中的TransformerEncoder部分，类似于构建了一个Transformer的编码器部分，如下图[1]所示：\n",
     "\n",
-    "![vit-encoder](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/tutorials/application/source_zh_cn/cv/images/vit_encoder.png)\n",
+    "![vit-encoder](pic/vit_encoder.png)\n",
     "\n",
     "1. ViT模型中的基础结构与标准Transformer有所不同，主要在于Normalization的位置是放在Self-Attention和Feed Forward之前，其他结构如Residual Connection，Feed Forward，Normalization都如Transformer中所设计。\n",
     "\n",
@@ -406,6 +397,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -455,7 +449,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -479,6 +472,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -513,7 +509,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -543,6 +538,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -631,7 +629,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -639,13 +636,12 @@
    "source": [
     "整体流程图如下所示：\n",
     "\n",
-    "![data-process](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/tutorials/application/source_zh_cn/cv/images/data_process.png)"
+    "![data-process](pic/data_process.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -665,42 +661,14 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://download.mindspore.cn/vision/classification/vit_b_16_224.ckpt (330.2 MB)\n",
-      "\n",
-      "file_sizes: 100%|████████████████████████████| 346M/346M [00:05<00:00, 59.5MB/s]\n",
-      "Successfully downloaded file to ./ckpt/vit_b_16_224.ckpt\n",
-      "epoch: 1 step: 125, loss is 1.903618335723877\n",
-      "Train epoch time: 99857.517 ms, per step time: 798.860 ms\n",
-      "epoch: 2 step: 125, loss is 1.448015570640564\n",
-      "Train epoch time: 95555.111 ms, per step time: 764.441 ms\n",
-      "epoch: 3 step: 125, loss is 1.2555729150772095\n",
-      "Train epoch time: 95553.210 ms, per step time: 764.426 ms\n",
-      "epoch: 4 step: 125, loss is 1.3787992000579834\n",
-      "Train epoch time: 95569.835 ms, per step time: 764.559 ms\n",
-      "epoch: 5 step: 125, loss is 1.7505667209625244\n",
-      "Train epoch time: 95463.133 ms, per step time: 763.705 ms\n",
-      "epoch: 6 step: 125, loss is 2.5462236404418945\n",
-      "Train epoch time: 95428.906 ms, per step time: 763.431 ms\n",
-      "epoch: 7 step: 125, loss is 1.5103509426116943\n",
-      "Train epoch time: 95411.338 ms, per step time: 763.291 ms\n",
-      "epoch: 8 step: 125, loss is 1.4719784259796143\n",
-      "Train epoch time: 95644.054 ms, per step time: 765.152 ms\n",
-      "epoch: 9 step: 125, loss is 1.2415032386779785\n",
-      "Train epoch time: 95511.758 ms, per step time: 764.094 ms\n",
-      "epoch: 10 step: 125, loss is 1.098097562789917\n",
-      "Train epoch time: 95270.282 ms, per step time: 762.162 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindspore.nn import LossBase\n",
     "from mindspore.train import LossMonitor, TimeMonitor, CheckpointConfig, ModelCheckpoint\n",
@@ -781,7 +749,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -807,19 +774,14 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Top_1_Accuracy': 0.75, 'Top_5_Accuracy': 0.928}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_val = ImageFolderDataset(os.path.join(data_path, \"val\"), shuffle=True)\n",
     "\n",
@@ -863,7 +825,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -875,7 +836,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -893,6 +853,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -917,7 +880,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -933,19 +895,14 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{236: 'Doberman'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pathlib\n",
@@ -1106,7 +1063,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -1114,7 +1070,7 @@
    "source": [
     "推理过程完成后，在推理文件夹下可以找到图片的推理结果，可以看出预测结果是Doberman，与期望结果相同，验证了模型的准确性。\n",
     "\n",
-    "![infer-result](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/tutorials/application/source_zh_cn/cv/images/infer_result.jpg)"
+    "![infer-result](pic/infer_result.jpg)"
    ]
   },
   {
@@ -1133,9 +1089,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MindSpore",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "mindspore"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1147,7 +1103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.6.4"
   },
   "vscode": {
    "interpreter": {
