--- a/Application/NLP/LSTM+CRF序列标注.ipynb
+++ b/Application/NLP/LSTM+CRF序列标注.ipynb
@@ -5,9 +5,7 @@
    "id": "66014f9c-60b8-4cb4-b5c0-3f387aaf01af",
    "metadata": {},
    "source": [
-    "# LSTM+CRF序列标注\n",
-    "\n",
-    "[![下载Notebook](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_notebook.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/application/zh_cn/nlp/mindspore_sequence_labeling.ipynb)&emsp;[![下载样例代码](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_download_code.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/application/zh_cn/nlp/mindspore_sequence_labeling.py)&emsp;[![查看源文件](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_source.svg)](https://gitee.com/mindspore/docs/blob/r2.3/tutorials/application/source_zh_cn/nlp/sequence_labeling.ipynb)"
+    "# LSTM+CRF序列标注"
    ]
   },
   {
@@ -102,32 +100,32 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "5ea03d9b10ac8d29",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture captured_output\n",
     "# 实验环境已经预装了mindspore==2.2.14，如需更换mindspore版本，可更改下面mindspore的版本号\n",
     "!pip uninstall mindspore -y\n",
     "!pip install -i https://pypi.mirrors.ustc.edu.cn/simple mindspore==2.2.14"
-   ],
-   "id": "5ea03d9b10ac8d29"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "27214cca8650eb90",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 查看当前 mindspore 版本\n",
     "!pip show mindspore"
-   ],
-   "id": "27214cca8650eb90"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d09936ad-6b20-4423-9f57-8e14917e61d4",
    "metadata": {},
    "outputs": [],
@@ -188,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d9a0ef6a-1c3a-400e-9053-e0659e8f9e7e",
    "metadata": {},
    "outputs": [],
@@ -254,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7c286935-74eb-413a-8e47-b8fb5264e6b6",
    "metadata": {},
    "outputs": [],
@@ -324,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "120a39c7-c89d-4cd3-8a75-da27d2853f0e",
    "metadata": {},
    "outputs": [],
@@ -423,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c07555e3-f2a2-4c25-beff-5a78491ab2d1",
    "metadata": {},
    "outputs": [],
@@ -455,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fa53f535-34bc-49a3-b769-e85d3a184cc0",
    "metadata": {},
    "outputs": [],
@@ -483,21 +481,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5c255358-938b-4e88-a810-2fe4e616a044",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(word_to_idx)"
    ]
@@ -514,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e6d3f2bb-0ea7-457c-8a74-a8e0ea78a109",
    "metadata": {},
    "outputs": [],
@@ -525,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "866a32ed-4294-4816-bcac-c56f0a491dde",
    "metadata": {},
    "outputs": [],
@@ -548,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7899b6e6-95a4-4ffe-ba49-b27cebe8b306",
    "metadata": {},
    "outputs": [],
@@ -573,21 +560,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0e984dcb-6f89-4520-940f-620cdb997529",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((2, 11), (2, 11), (2,))"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data, label, seq_length = prepare_sequence(training_data, word_to_idx, tag_to_idx)\n",
     "data.shape, label.shape, seq_length.shape"
@@ -605,18 +581,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "46595499-c50e-48ea-82ff-e006b00aba12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 500/500 [00:23<00:00, 21.13it/s, loss=0.3487625]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
@@ -638,23 +606,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "65304086-de03-4edc-b3a2-3ca5e43c4795",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Tensor(shape=[2, 3], dtype=Float32, value=\n",
-       "[[ 3.15928860e+01,  3.63119812e+01,  3.17248516e+01],\n",
-       " [ 2.81416149e+01,  2.61749763e+01,  3.24760780e+01]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "score, history = model(data, seq_length)\n",
     "score"
@@ -670,21 +625,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ed5ff78a-099c-41f8-ac1e-8f9fbfab7659",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 1, 1, 1, 2, 2, 2, 2, 2, 0, 1], [0, 1, 2, 2, 2, 2, 2, 2, 2]]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict = post_decode(score, history, seq_length)\n",
     "predict"
@@ -700,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "df505983-9c1f-4e09-8a67-1cd78ce69fd0",
    "metadata": {},
    "outputs": [],
@@ -716,22 +660,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e30d43c7-7c09-445e-94a4-33fccfaeaf11",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['B', 'I', 'I', 'I', 'O', 'O', 'O', 'O', 'O', 'B', 'I'],\n",
-       " ['B', 'I', 'O', 'O', 'O', 'O', 'O', 'O', 'O']]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sequence_to_tag(predict, idx_to_tag)"
    ]
@@ -739,9 +671,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MindSpore",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "mindspore"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -753,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5 (default, Oct 25 2019, 15:51:11) \n[GCC 7.3.0]"
+   "version": "3.6.4"
   },
   "vscode": {
    "interpreter": {
