--- a/Application/LLM_Practice_and_Principles/基于MindSpore的GPT2文本摘要.ipynb
+++ b/Application/LLM_Practice_and_Principles/基于MindSpore的GPT2文本摘要.ipynb
@@ -9,29 +9,29 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "c36235da5dc3361e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture captured_output\n",
     "# 实验环境已经预装了mindspore==2.2.14，如需更换mindspore版本，可更改下面mindspore的版本号\n",
     "!pip uninstall mindspore -y\n",
     "!pip install -i https://pypi.mirrors.ustc.edu.cn/simple mindspore==2.2.14"
-   ],
-   "id": "c36235da5dc3361e"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6491560b-1ec6-4ca1-88cc-c7f9c1297725",
+   "metadata": {},
    "outputs": [],
-   "execution_count": 1,
    "source": [
     "!pip install tokenizers==0.15.0 -i https://pypi.tuna.tsinghua.edu.cn/simple\n",
     "# 该案例在 mindnlp 0.3.1 版本完成适配，如果发现案例跑不通，可以指定mindnlp版本，执行`!pip install mindnlp==0.3.1`\n",
     "!pip install mindnlp"
-   ],
-   "id": "6491560b-1ec6-4ca1-88cc-c7f9c1297725"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,21 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9b5868b6-7a52-4f97-b934-4d3632a978a2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5000"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindspore.dataset import TextFileDataset\n",
     "\n",
@@ -86,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9bf79231-864c-4e11-9409-995c95cdb30f",
    "metadata": {},
    "outputs": [],
@@ -116,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f1ee1961-0658-4e70-95c2-81fefd83a40b",
    "metadata": {},
    "outputs": [],
@@ -158,21 +147,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e3cd8e57-72bc-4d2e-b38d-38b24efadd49",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11273"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindnlp.transformers import BertTokenizer\n",
     "\n",
@@ -183,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0e89c26b-4970-449a-a0c4-b6c61845e336",
    "metadata": {},
    "outputs": [],
@@ -193,30 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1b65cc13-0a52-4bae-ab5f-ebb813a4d3ab",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Tensor(shape=[4, 1024], dtype=Int64, value=\n",
-       " [[101, 100, 100 ...   0,   0,   0],\n",
-       "  [101, 100, 100 ...   0,   0,   0],\n",
-       "  [101, 100, 100 ... 100, 100, 102],\n",
-       "  [101, 100, 100 ...   0,   0,   0]]),\n",
-       " Tensor(shape=[4, 1024], dtype=Int64, value=\n",
-       " [[101, 100, 100 ...   0,   0,   0],\n",
-       "  [101, 100, 100 ...   0,   0,   0],\n",
-       "  [101, 100, 100 ... 100, 100, 102],\n",
-       "  [101, 100, 100 ...   0,   0,   0]])]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "next(train_dataset.create_tuple_iterator())"
    ]
@@ -233,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2f295944-ea2e-41e1-8301-472e09223792",
    "metadata": {},
    "outputs": [],
@@ -266,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "73c7be3d-44dc-49d4-abd8-c41f316a28d9",
    "metadata": {},
    "outputs": [],
@@ -302,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1a655320-2d05-4c93-bc8b-f1b4f45f809f",
    "metadata": {},
    "outputs": [],
@@ -316,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "81ac9003-2dcf-42f8-b42d-3a788f172d98",
    "metadata": {},
    "outputs": [],
@@ -333,18 +291,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2803c71c-3591-48cf-a6a9-6b840af749bf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of model parameters: 94500096\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 记录模型参数数量\n",
     "print('number of model parameters: {}'.format(model.num_parameters()))"
@@ -397,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "787795ec-0c07-4be6-97b7-4defbe899117",
    "metadata": {},
    "outputs": [],
@@ -421,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "996842c4-f793-4393-ae64-2d4b065bc9f2",
    "metadata": {},
    "outputs": [],
@@ -441,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "1a5288a4-f584-479b-9653-bda060e00279",
    "metadata": {},
    "outputs": [],
@@ -467,14 +417,6 @@
     "    if i == 1:\n",
     "        break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba5e8a59-a13f-4caf-8418-c090d0438729",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -490,9 +432,9 @@
    "name": "mindspore1.7.0-cuda10.1-py3.7-ubuntu18.04"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -504,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
