--- a/Application/LLM_Practice_and_Principles/MindNLP ChatGLM-6B StreamChat.ipynb
+++ b/Application/LLM_Practice_and_Principles/MindNLP ChatGLM-6B StreamChat.ipynb
@@ -19,17 +19,17 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "da7eb9b265ae7444",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture captured_output\n",
     "# 实验环境已经预装了mindspore==2.2.14，如需更换mindspore版本，可更改下面mindspore的版本号\n",
     "!pip uninstall mindspore -y\n",
     "!pip install -i https://pypi.mirrors.ustc.edu.cn/simple mindspore==2.2.14"
-   ],
-   "id": "da7eb9b265ae7444"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9123d70f",
    "metadata": {
     "tags": []
@@ -62,65 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9b8ee640",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache /tmp/jieba.cache\n",
-      "Loading model cost 1.029 seconds.\n",
-      "Prefix dict has been built successfully.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8a684c63cf24d4faf3ad4f786293a96",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/8 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b984ac19c56640baae5620fb52ed42dd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0.00/441 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e59acb16e4a4be18566bf90c44df02e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0.00/2.58M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindnlp.transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
     "import gradio as gr\n",
@@ -143,44 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "95fc7ad5-b210-4318-8897-af50b8e6ebd4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The dtype of attention mask (Float32) is not bool\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|\r"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'你好👋！我是人工智能助手 ChatGLM-6B'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "prompt = '你好'\n",
     "history = []\n",
@@ -202,9 +117,9 @@
    "name": "mindspore1.7.0-cuda10.1-py3.7-ubuntu18.04"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -216,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
