--- a/Application/LLM_Practice_and_Principles/基于MindSpore通过GPT实现情感分类.ipynb
+++ b/Application/LLM_Practice_and_Principles/基于MindSpore通过GPT实现情感分类.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,29 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25000"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "imdb_train.get_dataset_size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,30 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Tensor(shape=[4, 512], dtype=Int64, value=\n",
-       " [[   11,   250,    15 ...     3,   242,     3],\n",
-       "  [    5,    23,     5 ... 40480, 40480, 40480],\n",
-       "  [   14,     3,     5 ...   243,     8, 18073],\n",
-       "  [    7,   250,     3 ... 40480, 40480, 40480]]),\n",
-       " Tensor(shape=[4, 512], dtype=Int64, value=\n",
-       " [[1, 1, 1 ... 1, 1, 1],\n",
-       "  [1, 1, 1 ... 0, 0, 0],\n",
-       "  [1, 1, 1 ... 1, 1, 1],\n",
-       "  [1, 1, 1 ... 0, 0, 0]]),\n",
-       " Tensor(shape=[4], dtype=Int32, value= [0, 1, 0, 1])]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "next(dataset_train.create_tuple_iterator())"
    ]
@@ -236,13 +204,6 @@
     "evaluator = Evaluator(network=model, eval_dataset=dataset_test, metrics=metric)\n",
     "evaluator.run(tgt_columns=\"labels\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -258,9 +219,9 @@
    "name": "mindspore1.7.0-cuda10.1-py3.7-ubuntu18.04"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -272,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
