--- a/MindSpore_Four/bert_emotect_finetune.ipynb
+++ b/MindSpore_Four/bert_emotect_finetune.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -114,35 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-11-11 08:52:25--  https://baidu-nlp.bj.bcebos.com/emotion_detection-dataset-1.0.0.tar.gz\n",
-      "Resolving baidu-nlp.bj.bcebos.com (baidu-nlp.bj.bcebos.com)... 36.110.192.178, 2409:8c04:1001:1203:0:ff:b0bb:4f27\n",
-      "Connecting to baidu-nlp.bj.bcebos.com (baidu-nlp.bj.bcebos.com)|36.110.192.178|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 1710581 (1.6M) [application/x-gzip]\n",
-      "Saving to: ‘emotion_detection.tar.gz’\n",
-      "\n",
-      "emotion_detection.t 100%[===================>]   1.63M  5.18MB/s    in 0.3s    \n",
-      "\n",
-      "2024-11-11 08:52:26 (5.18 MB/s) - ‘emotion_detection.tar.gz’ saved [1710581/1710581]\n",
-      "\n",
-      "data/\n",
-      "data/test.tsv\n",
-      "data/infer.tsv\n",
-      "data/dev.tsv\n",
-      "data/train.tsv\n",
-      "data/vocab.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# download dataset\n",
     "!wget https://baidu-nlp.bj.bcebos.com/emotion_detection-dataset-1.0.0.tar.gz -O emotion_detection.tar.gz\n",
@@ -160,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -204,20 +180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ma-user/anaconda3/envs/MindSpore/lib/python3.9/site-packages/mindnlp/transformers/tokenization_utils_base.py:1526: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted, and will be then set to `False` by default. \n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindnlp.transformers import BertTokenizer\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-chinese')"
@@ -225,27 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer.pad_token_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -258,54 +214,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['input_ids', 'attention_mask', 'labels']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_train.get_col_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Tensor(shape=[32, 64], dtype=Int64, value=\n",
-      "[[ 101, 3209, 1921 ...    0,    0,    0],\n",
-      " [ 101,  872, 6206 ...    0,    0,    0],\n",
-      " [ 101, 1469, 2769 ...    0,    0,    0],\n",
-      " ...\n",
-      " [ 101, 3300, 1957 ...    0,    0,    0],\n",
-      " [ 101, 1381, 2797 ...    0,    0,    0],\n",
-      " [ 101, 5439, 2094 ...    0,    0,    0]]), Tensor(shape=[32, 64], dtype=Int64, value=\n",
-      "[[1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " ...\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0]]), Tensor(shape=[32], dtype=Int32, value= [1, 1, 1, 0, 2, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 0, 2, 1, 1, \n",
-      " 1, 1, 1, 1, 1, 1, 1, 0])]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(next(dataset_train.create_tuple_iterator()))"
    ]
@@ -321,20 +243,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-chinese and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindnlp.transformers import BertForSequenceClassification\n",
     "\n",
@@ -344,19 +257,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading builder script: 4.20kB [00:00, 7.13MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindnlp.engine import TrainingArguments\n",
     "from mindnlp import evaluate\n",
@@ -390,188 +295,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 1/906 [00:06<1:42:25,  6.79s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 33%|███▎      | 302/906 [02:23<04:06,  2.45it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.3404, 'learning_rate': 1.3333333333333333e-05, 'epoch': 1.0}\n",
-      "\\\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|          | 0/34 [00:00<?, ?it/s]\u001b[A\n",
-      "  6%|▌         | 2/34 [00:00<00:11,  2.70it/s]\u001b[A\n",
-      " 15%|█▍        | 5/34 [00:00<00:04,  6.85it/s]\u001b[A\n",
-      " 24%|██▎       | 8/34 [00:00<00:02, 10.54it/s]\u001b[A\n",
-      " 32%|███▏      | 11/34 [00:01<00:01, 13.69it/s]\u001b[A\n",
-      " 41%|████      | 14/34 [00:01<00:01, 16.39it/s]\u001b[A\n",
-      " 50%|█████     | 17/34 [00:01<00:00, 18.53it/s]\u001b[A\n",
-      " 59%|█████▉    | 20/34 [00:01<00:00, 20.14it/s]\u001b[A\n",
-      " 68%|██████▊   | 23/34 [00:01<00:00, 21.46it/s]\u001b[A\n",
-      " 76%|███████▋  | 26/34 [00:01<00:00, 22.48it/s]\u001b[A\n",
-      " 85%|████████▌ | 29/34 [00:01<00:00, 23.13it/s]\u001b[A\n",
-      " 94%|█████████▍| 32/34 [00:01<00:00, 23.49it/s]\u001b[A\n",
-      "                                                 \n",
-      " 33%|███▎      | 302/906 [02:25<04:06,  2.45it/s]A\n",
-      "                                               \u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.1953490525484085, 'eval_accuracy': 0.9277777777777778, 'eval_runtime': 2.4662, 'eval_samples_per_second': 13.786, 'eval_steps_per_second': 2.027, 'epoch': 1.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|██████▋   | 604/906 [04:49<02:01,  2.49it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.1936, 'learning_rate': 6.666666666666667e-06, 'epoch': 2.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|          | 0/34 [00:00<?, ?it/s]\u001b[A\n",
-      "  6%|▌         | 2/34 [00:00<00:06,  4.60it/s]\u001b[A\n",
-      "  9%|▉         | 3/34 [00:00<00:05,  5.50it/s]\u001b[A\n",
-      " 18%|█▊        | 6/34 [00:00<00:02, 10.58it/s]\u001b[A\n",
-      " 26%|██▋       | 9/34 [00:00<00:01, 14.14it/s]\u001b[A\n",
-      " 35%|███▌      | 12/34 [00:00<00:01, 16.39it/s]\u001b[A\n",
-      " 44%|████▍     | 15/34 [00:01<00:01, 17.74it/s]\u001b[A\n",
-      " 53%|█████▎    | 18/34 [00:01<00:00, 18.86it/s]\u001b[A\n",
-      " 62%|██████▏   | 21/34 [00:01<00:00, 19.60it/s]\u001b[A\n",
-      " 71%|███████   | 24/34 [00:01<00:00, 20.34it/s]\u001b[A\n",
-      " 79%|███████▉  | 27/34 [00:01<00:00, 20.91it/s]\u001b[A\n",
-      " 88%|████████▊ | 30/34 [00:01<00:00, 21.32it/s]\u001b[A\n",
-      " 97%|█████████▋| 33/34 [00:01<00:00, 21.65it/s]\u001b[A\n",
-      "                                                 \n",
-      " 67%|██████▋   | 604/906 [04:52<02:01,  2.49it/s]A\n",
-      "                                               \u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.12897711992263794, 'eval_accuracy': 0.9527777777777777, 'eval_runtime': 2.5883, 'eval_samples_per_second': 13.136, 'eval_steps_per_second': 1.932, 'epoch': 2.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 906/906 [07:13<00:00,  2.40it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.1274, 'learning_rate': 0.0, 'epoch': 3.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|          | 0/34 [00:00<?, ?it/s]\u001b[A\n",
-      "  6%|▌         | 2/34 [00:00<00:08,  3.61it/s]\u001b[A\n",
-      " 15%|█▍        | 5/34 [00:00<00:03,  8.30it/s]\u001b[A\n",
-      " 24%|██▎       | 8/34 [00:00<00:02, 11.92it/s]\u001b[A\n",
-      " 32%|███▏      | 11/34 [00:00<00:01, 14.40it/s]\u001b[A\n",
-      " 41%|████      | 14/34 [00:01<00:01, 16.49it/s]\u001b[A\n",
-      " 50%|█████     | 17/34 [00:01<00:00, 18.06it/s]\u001b[A\n",
-      " 59%|█████▉    | 20/34 [00:01<00:00, 18.83it/s]\u001b[A\n",
-      " 68%|██████▊   | 23/34 [00:01<00:00, 19.86it/s]\u001b[A\n",
-      " 76%|███████▋  | 26/34 [00:01<00:00, 20.57it/s]\u001b[A\n",
-      " 85%|████████▌ | 29/34 [00:01<00:00, 20.53it/s]\u001b[A\n",
-      "                                                 A\n",
-      "100%|██████████| 906/906 [07:16<00:00,  2.40it/s]\n",
-      "100%|██████████| 34/34 [00:02<00:00, 21.08it/s]\u001b[A\n",
-      "                                               \u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.08728260546922684, 'eval_accuracy': 0.9740740740740741, 'eval_runtime': 2.8534, 'eval_samples_per_second': 11.916, 'eval_steps_per_second': 1.752, 'epoch': 3.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 906/906 [07:29<00:00,  2.02it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'train_runtime': 449.2124, 'train_samples_per_second': 64.54, 'train_steps_per_second': 2.017, 'train_loss': 0.22047983889548195, 'epoch': 3.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=906, training_loss=0.22047983889548195, metrics={'train_runtime': 449.2124, 'train_samples_per_second': 64.54, 'train_steps_per_second': 2.017, 'train_loss': 0.22047983889548195, 'epoch': 3.0})"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# start training\n",
     "trainer.train()"
@@ -586,34 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 33/33 [00:02<00:00, 13.98it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'eval_loss': 0.3298051655292511,\n",
-       " 'eval_accuracy': 0.8986486486486487,\n",
-       " 'eval_runtime': 3.0632,\n",
-       " 'eval_samples_per_second': 10.773,\n",
-       " 'eval_steps_per_second': 1.632,\n",
-       " 'epoch': 3.0}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.evaluate(dataset_test)"
    ]
@@ -629,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -640,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -660,31 +365,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "inputs: '我 要 客观', predict: '中性' , label: '中性'\n",
-      "inputs: '靠 你 真是 说 废话 吗', predict: '消极' , label: '消极'\n",
-      "inputs: '口嗅 会', predict: '中性' , label: '中性'\n",
-      "inputs: '每次 是 表妹 带 窝 飞 因为 窝路痴', predict: '中性' , label: '中性'\n",
-      "inputs: '别说 废话 我 问 你 个 问题', predict: '消极' , label: '消极'\n",
-      "inputs: '4967 是 新加坡 那 家 银行', predict: '中性' , label: '中性'\n",
-      "inputs: '是 我 喜欢 兔子', predict: '积极' , label: '积极'\n",
-      "inputs: '你 写 过 黄山 奇石 吗', predict: '中性' , label: '中性'\n",
-      "inputs: '一个一个 慢慢来', predict: '中性' , label: '中性'\n",
-      "inputs: '我 玩 过 这个 一点 都 不 好玩', predict: '消极' , label: '消极'\n",
-      "inputs: '网上 开发 女孩 的 QQ', predict: '中性' , label: '中性'\n",
-      "inputs: '背 你 猜 对 了', predict: '中性' , label: '中性'\n",
-      "inputs: '我 讨厌 你 ， 哼哼 哼 。 。', predict: '消极' , label: '消极'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindspore import Tensor\n",
     "\n",
@@ -703,19 +388,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "inputs: '家人们咱就是说一整个无语住了 绝绝子叠buff', predict: '中性'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict(\"家人们咱就是说一整个无语住了 绝绝子叠buff\")"
    ]
@@ -741,9 +418,9 @@
    "name": "mindspore1.7.0-cuda10.1-py3.7-ubuntu18.04"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "MindSpore",
    "language": "python",
-   "name": "python3"
+   "name": "mindspore"
   },
   "language_info": {
    "codemirror_mode": {
@@ -755,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
