--- a/MindSpore_Four/gpt2_summerization.ipynb
+++ b/MindSpore_Four/gpt2_summerization.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "24c68561",
    "metadata": {},
    "outputs": [],
@@ -39,24 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "35fc2591",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ma-user/anaconda3/envs/MindSpore/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache /tmp/jieba.cache\n",
-      "Loading model cost 1.347 seconds.\n",
-      "Prefix dict has been built successfully.\n",
-      "145MB [00:06, 22.6MB/s] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindnlp.utils import http_get\n",
     "\n",
@@ -67,21 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "08fef626",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50000"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindspore.dataset import TextFileDataset\n",
     "\n",
@@ -102,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "966d1851",
    "metadata": {},
    "outputs": [],
@@ -133,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9f3cef58",
    "metadata": {},
    "outputs": [],
@@ -175,29 +150,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3839a509",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ma-user/anaconda3/envs/MindSpore/lib/python3.9/site-packages/mindnlp/transformers/tokenization_utils_base.py:1526: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted, and will be then set to `False` by default. \n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "21128"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindnlp.transformers import BertTokenizer\n",
     "\n",
@@ -208,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8b5ba50f",
    "metadata": {},
    "outputs": [],
@@ -218,24 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c6e63fa3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Tensor(shape=[1, 1024], dtype=Int64, value=\n",
-       " [[ 101, 1724, 3862 ...    0,    0,    0]]),\n",
-       " Tensor(shape=[1, 1024], dtype=Int64, value=\n",
-       " [[ 101, 1724, 3862 ...    0,    0,    0]])]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "next(train_dataset.create_tuple_iterator())"
    ]
@@ -252,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "31da5685",
    "metadata": {},
    "outputs": [],
@@ -302,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "065424b8",
    "metadata": {},
    "outputs": [],
@@ -340,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "65d10e01",
    "metadata": {},
    "outputs": [],
@@ -354,27 +296,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "50882ea3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPT2LMHeadModel has generative capabilities, as `prepare_inputs_for_generation` is explicitly overwritten. However, it doesn't directly inherit from `GenerationMixin`.`PreTrainedModel` will NOT inherit from `GenerationMixin`, and this model will lose the ability to call `generate` and other related functions.\n",
-      "  - If you are the owner of the model architecture code, please modify your model class such that it inherits from `GenerationMixin` (after `PreTrainedModel`, otherwise you'll get an exception).\n",
-      "  - If you are not the owner of the model architecture class, please contact the model code owner to update it.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[MS_ALLOC_CONF]Runtime config:  enable_vmm:True  vmm_align_size:2MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindspore import nn\n",
     "from mindnlp.transformers import GPT2Config, GPT2LMHeadModel\n",
@@ -389,18 +314,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5e7d0e93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of model parameters: 102068736\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 记录模型参数数量\n",
     "print('number of model parameters: {}'.format(model.num_parameters()))"
@@ -408,18 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d1052683",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Trainer will use 'StaticLossScaler' with `scale_value=2 ** 10` when `loss_scaler` is None.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 修改部分代码\n",
     "# from mindnlp._legacy.engine import Trainer\n",
@@ -435,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "59e20d11",
    "metadata": {},
    "outputs": [],
@@ -465,70 +374,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e0a3c20d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/45 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  2%|▏         | 1/45 [00:09<06:53,  9.41s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 45/45 [01:07<00:00,  1.49s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'train_runtime': 67.2534, 'train_samples_per_second': 5.353, 'train_steps_per_second': 0.669, 'train_loss': 9.129802788628472, 'epoch': 1.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=45, training_loss=9.129802788628472, metrics={'train_runtime': 67.2534, 'train_samples_per_second': 5.353, 'train_steps_per_second': 0.669, 'train_loss': 9.129802788628472, 'epoch': 1.0})"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 修改部分代码\n",
     "# trainer.run(tgt_columns=\"labels\")\n",
@@ -537,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a94117fc",
    "metadata": {},
    "outputs": [],
@@ -561,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fdac182e",
    "metadata": {},
    "outputs": [],
@@ -571,74 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "56356c98",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[array([[ 101, 4373, 3360, 3173, 7319, 5381,  118, 4373, 3360, 3241, 2845,\n",
-      "        6380, 8020, 6858, 6380, 1447,  133,  100,  135, 7942,  837, 2412,\n",
-      "        8021, 5298, 6756, 7313, 7395, 8024, 1355, 4385, 6378, 5298, 1767,\n",
-      "        7353, 6818,  671, 3418, 4510, 5296, 3327,  677, 3300,  671,  702,\n",
-      "        7881, 4973, 8024, 8128, 2259, 4638, 1144, 3378, 4989, 1315, 4260,\n",
-      "         677, 1343, 2929, 7881, 8024,  679, 2682, 2218, 3634, 1462,  700,\n",
-      "        7942, 3787,  511, 3189, 1184, 1355, 4495, 1762, 1300, 4635, 1344,\n",
-      "        3152, 1765, 7252,  671, 7730, 3413, 6378, 5298, 1767, 4638, 2692,\n",
-      "        1912,  752, 3125, 8024,  808,  782, 1537, 1656,  511,  791, 2399,\n",
-      "        8128, 2259, 4638, 1144, 3378, 3221, 1300, 4635, 1344, 2123, 4059,\n",
-      "        7252, 3173, 5783, 3333,  782, 8024,  679,  719, 1184, 1168, 1071,\n",
-      "        1828, 1356, 1144, 3378, 3378,  818, 3136, 5298, 4638, 2123, 4059,\n",
-      "        7252, 3378, 7730, 3413, 1346, 1217, 3749, 6756, 7730, 7724, 1447,\n",
-      "        1824, 6378,  511, 8132, 3189,  704, 1286, 8024, 1144, 3378, 7390,\n",
-      "        1828, 1356, 1144, 3378, 3378, 1350, 1369, 1912, 1126, 1399, 2110,\n",
-      "        1447, 2458, 6756, 1168, 3152, 1765, 7252, 8024,  955, 4500, 3152,\n",
-      "        1765, 7252, 7160, 4635, 5106, 1322, 7353, 6818, 4638, 6378, 5298,\n",
-      "        1767, 5298, 6756,  511, 8122, 3198, 6387, 8024, 6378, 5298, 7313,\n",
-      "        7395, 8024, 1144, 3378, 1355, 4385, 6378, 5298, 1767, 7353, 6818,\n",
-      "         671, 3418, 4510, 5296, 3327,  677, 3300,  671,  702, 7881, 4973,\n",
-      "        8024,  671, 1372,  100, 1061, 1520,  100, 3633, 1388, 4708, 6001,\n",
-      "        2094, 7607, 1726, 7881, 4973,  511, 2398, 3198, 1144, 3378,  981,\n",
-      "        2209,  833, 2936, 7881, 1139, 1297, 8024, 4761, 6887, 6821, 4905,\n",
-      "        7881,  817,  966, 8135, 1914, 1039,  511,  800, 6656, 6716, 6804,\n",
-      "        2110, 1447, 2802,  749,  702, 2875, 1461, 8024,  912, 7607, 1944,\n",
-      "        6814, 1343, 8024, 3617, 4260,  677, 4510, 5296, 3327, 2929, 7881,\n",
-      "         511, 1144, 3378, 3378, 1355, 4385, 1400, 6841, 6814, 1343, 3617,\n",
-      "        7349, 3632, 8024,  852,  711, 3198, 2347, 3241, 8024, 5023, 1144,\n",
-      "        3378, 3378, 6628, 1168, 3198, 8024, 1144, 3378, 2347, 4260, 1168,\n",
-      "        4510, 5296, 3327, 7553, 8024,  847, 2797, 2929, 7881, 3198,  679,\n",
-      "        2708, 6239, 4821, 1168, 1928, 7553, 4638, 7770, 1327, 4510, 5296,\n",
-      "        8024, 2496, 1315, 6716,  767,  511, 1071, 2797, 2958, 6158, 1912,\n",
-      "        7463, 4638, 7167, 3363, 1173, 4959, 8024, 2221,  860, 2647, 2899,\n",
-      "        1762, 4510, 5296, 3327,  677,  511, 8153, 3189,  678, 1286, 8024,\n",
-      "        1762, 3152, 1765,  510, 2123, 4059, 7252, 3124, 2424, 1350, 4685,\n",
-      "        1068, 6956, 7305, 1291, 6444,  678, 8024, 4685, 1068, 6569,  818,\n",
-      "        3175,  680, 3647, 5442, 2157, 2247, 6809, 2768, 6608,  985, 1291,\n",
-      "        6379, 8024, 3647, 5442, 2157, 2247, 1398, 2692, 2199, 3647, 5442,\n",
-      "        2221,  860, 1357,  678, 3021, 6624, 8024, 4685, 1068, 6569,  818,\n",
-      "        3175, 1066, 6608,  985, 3647, 5442, 2157, 2247, 8115,  119,  129,\n",
-      "         674, 1039, 8024, 1071,  704, 2123, 4059, 7252, 3378, 7730, 3413,\n",
-      "        6608,  802,  128,  119,  124,  674, 1039, 8024, 3647, 5442, 1828,\n",
-      "        1356, 1144, 3378, 3378, 8020, 7730, 3413, 3136, 5298, 8021, 6608,\n",
-      "         802,  126,  119,  124,  674, 1039, 8024, 3152, 1765,  897, 4510,\n",
-      "        2792, 3315, 3341, 3766, 3300, 4684, 2970, 6569,  818, 8024,  852,\n",
-      "        1139,  754,  782, 6887,  712,  721, 6608,  802,  124,  119,  123,\n",
-      "         674, 1039,  511, 8020, 1333, 3403, 7579, 8038,  711, 2929,  671,\n",
-      "        1372, 7881,  133,  100,  135, 6608,  677,  671, 3340, 1462, 1300,\n",
-      "        4635,  671, 4511, 2094, 4260, 4510, 5296, 3327, 2929, 7881, 8024,\n",
-      "         679, 2708, 6239, 4510, 6716,  767, 8021,  102]], dtype=int64), array(['玉林21岁小伙驾校培训期间爬上电线杆抓鸟，触到高压电线触电身亡；相关责任方赔偿家属15.8万元(图)'], dtype='<U50')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(next(batched_test_dataset.create_tuple_iterator(output_numpy=True)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "564bc179",
    "metadata": {},
    "outputs": [],
@@ -658,26 +450,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "073809c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CLS] 玉 林 新 闻 网 - 玉 林 晚 报 讯 （ 通 讯 员 < [UNK] > 黄 传 庆 ） 练 车 间 隙 ， 发 现 训 练 场 附 近 一 根 电 线 杆 上 有 一 个 鸟 窝 ， 21 岁 的 刁 某 立 即 爬 上 去 捉 鸟 ， 不 想 就 此 命 丧 黄 泉 。 日 前 发 生 在 博 白 县 文 地 镇 一 驾 校 训 练 场 的 意 外 事 故 ， 令 人 唏 嘘 。 今 年 21 岁 的 刁 某 是 博 白 县 宁 潭 镇 新 荣 村 人 ， 不 久 前 到 其 堂 叔 刁 某 某 任 教 练 的 宁 潭 镇 某 驾 校 参 加 汽 车 驾 驶 员 培 训 。 25 日 中 午 ， 刁 某 随 堂 叔 刁 某 某 及 另 外 几 名 学 员 开 车 到 文 地 镇 ， 借 用 文 地 镇 钛 白 粉 厂 附 近 的 训 练 场 练 车 。 14 时 许 ， 训 练 间 隙 ， 刁 某 发 现 训 练 场 附 近 一 根 电 线 杆 上 有 一 个 鸟 窝 ， 一 只 [UNK] 八 哥 [UNK] 正 叼 着 虫 子 飞 回 鸟 窝 。 平 时 刁 某 偶 尔 会 捕 鸟 出 卖 ， 知 道 这 种 鸟 价 值 100 多 元 。 他 跟 身 边 学 员 打 了 个 招 呼 ， 便 飞 奔 过 去 ， 欲 爬 上 电 线 杆 捉 鸟 。 刁 某 某 发 现 后 追 过 去 欲 阻 止 ， 但 为 时 已 晚 ， 等 刁 某 某 赶 到 时 ， 刁 某 已 爬 到 电 线 杆 顶 ， 伸 手 捉 鸟 时 不 慎 触 碰 到 头 顶 的 高 压 电 线 ， 当 即 身 亡 。 其 手 掌 被 外 露 的 钢 枝 刺 穿 ， 尸 体 悬 挂 在 电 线 杆 上 。 26 日 下 午 ， 在 文 地 、 宁 潭 镇 政 府 及 相 关 部 门 协 调 下 ， 相 关 责 任 方 与 死 者 家 属 达 成 赔 偿 协 议 ， 死 者 家 属 同 意 将 死 者 尸 体 取 下 搬 走 ， 相 关 责 任 方 共 赔 偿 死 者 家 属 15. 8 万 元 ， 其 中 宁 潭 镇 某 驾 校 赔 付 7. 3 万 元 ， 死 者 堂 叔 刁 某 某 （ 驾 校 教 练 ） 赔 付 5. 3 万 元 ， 文 地 供 电 所 本 来 没 有 直 接 责 任 ， 但 出 于 人 道 主 义 赔 付 3. 2 万 元 。 （ 原 标 题 ： 为 捉 一 只 鸟 < [UNK] > 赔 上 一 条 命 博 白 一 男 子 爬 电 线 杆 捉 鸟 ， 不 慎 触 电 身 亡 ） [SEP] ， ， 的 ， 。 。 ， [UNK] 。 的 。 [UNK] ， 有 ， 了 ， 现 ， 生 ， 出 ， 上 ， 时 。 有 。 一 ， 、 ， 能 。 了 。 现 的 的 [UNK] [UNK] 的 有 的 一 。 生 的 了\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.set_train(False)\n",
     "model.config.eos_token_id = model.config.sep_token_id\n",
@@ -713,9 +489,9 @@
    "name": "mindspore1.7.0-cuda10.1-py3.7-ubuntu18.04"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "MindSpore",
    "language": "python",
-   "name": "python3"
+   "name": "mindspore"
   },
   "language_info": {
    "codemirror_mode": {
@@ -727,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
